# SZE-MOSZE-2020-Mortar_Kombat

./: .gitignore  Blood_Raven.json  Character.cpp  Character.h  Character_8h_source.html  Dark_Wanderer.json  Doxyfile  Fallen.json  Game.cpp  Game.h  Hero.cpp  Hero.h  Hero_8h_source.html  JSON.cpp  JSON.h  JSONParser.cpp  JSONParser.h  JSONParser_8h_source.html  JSON_8h_source.html  Makefile  Map.cpp  Map.h  Monster.cpp  Monster.h  Monster_8h_source.html  Player.cpp  Player.h  Player_8h_source.html  README.md  README_gh-pages(1).md  Report.md  Words.cpp  Words.h  Zombie.json  _character_8cpp.html  _character_8cpp__incl.dot  _character_8cpp_source.html  _character_8h.html  _character_8h_source.html  a.out  (+68 more)
docker/: doxy.dockerfile  tests.dockerfile
html/: _character_8h.html  _character_8h__incl.dot  _character_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_character-members.html  classes.html  dir_5dbdcb31d58058d4b1cce10174551421.html  dir_a0195f3aa588c2af7c3d2065ed79e73f.html  dir_d522931ffa1371640980b621734a4381.html  files.html  functions.html  functions_func.html  globals_func.html  main_8cpp.html  main_8cpp__incl.dot  pages.html
latex/: _character_8cpp.tex  _character_8cpp.tex.tmp  _character_8cpp__incl.dot  _character_8h.tex  _character_8h__dep__incl.dot  _character_8h__incl.dot  _r_e_a_d_m_e_8md.tex  annotated.tex  class_character.tex  dir_2c4ecb7bbcdc7acc70fe6a4d8d732361.tex  (+9 more)
unit_testing/: CMakeLists.txt  good.json  good_output.json  json_parser_test.cpp  messed_up_input_keys.json  missing_bracket.json  missing_comma.json  missing_value.json
(+83 files in other folders)
