cmake_minimum_required(VERSION 2.6)
# Locate GTest
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
 
# Link runTests with what we want to test 
# and the GTest and pthread library
add_library(TestCode ../JSONParser.cpp)
add_executable(jsonParserTest json_parser_test.cpp)

target_link_libraries(jsonParserTest ${GTEST_LIBRARIES} pthread TestCode)